--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "@gianmarcotoso/use-form",
+	"name": "@polaritybit/use-form",
 	"version": "1.0.0",
+	"private": false,
 	"description": "A hook for forms",
 	"main": "dist/index.js",
 	"scripts": {
@@ -28,5 +29,9 @@
 		"ramda": "^0.27.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
+	},
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org/"
 	}
 }
