--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "@polaritybit/use-form",
 	"version": "1.0.1",
 	"private": false,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gianmarcotoso/use-form"
+	},
 	"description": "A hook for forms",
 	"main": "dist/index.js",
 	"scripts": {
