--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
+		"immer": "^9.0.7",
 		"ramda": "^0.27.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
