--- a/package.json
+++ b/package.json
@@ -15,25 +15,30 @@
 	"author": "Gian Marco Toso",
 	"license": "MIT",
 	"devDependencies": {
-		"@rollup/plugin-typescript": "^8.3.0",
-		"@testing-library/react-hooks": "^7.0.2",
-		"@types/jest": "^27.0.3",
-		"@types/ramda": "^0.27.60",
-		"@types/react": "^17.0.37",
-		"@types/react-dom": "^17.0.11",
-		"jest": "^27.4.5",
+		"@rollup/plugin-typescript": "^8.3.2",
+		"@testing-library/react": "^13.2.0",
+		"@types/jest": "^27.5.1",
+		"@types/ramda": "^0.28.13",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.5",
+		"jest": "^28.1.0",
+		"jest-environment-jsdom": "^28.1.0",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
 		"rimraf": "^3.0.2",
-		"rollup": "^2.61.1",
+		"rollup": "^2.74.1",
 		"rollup-plugin-multi-input": "^1.3.1",
-		"ts-jest": "^27.1.2",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.4"
+		"ts-jest": "^28.0.3",
+		"tslib": "^2.4.0",
+		"typescript": "^4.6.4"
 	},
 	"dependencies": {
-		"immer": "^9.0.7",
-		"ramda": "^0.27.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"immer": "^9.0.14",
+		"ramda": "^0.28.0"
+	},
+	"peerDependencies": {
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0"
 	},
 	"publishConfig": {
 		"access": "public",
